TradingAnalyticsApplication v1.0.1